--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,21 +1,32 @@
-- template: src=templates/pv.yaml dest=/tmp/pv.yaml
+- name: Copy PV
+  template: src=templates/pv.yaml dest=/tmp/pv.yaml
 
-- template: src=templates/pvc.yaml dest=/tmp/pvc.yaml
+- name: Copy PVC
+  template: src=templates/pvc.yaml dest=/tmp/pvc.yaml
 
-- template: src=templates/deployment.yaml dest=/tmp/deployment.yaml
+- name: Copy deployment
+  template: src=templates/deployment.yaml dest=/tmp/deployment.yaml
 
-- template: src=templates/service.yaml dest=/tmp/service.yaml
+- name: Copy Service
+  template: src=templates/service.yaml dest=/tmp/service.yaml
 
-- template: src=templates/ingress.yaml dest=/tmp/ingress.yaml
+- name: Copy Ingress
+  template: src=templates/ingress.yaml dest=/tmp/ingress.yaml
 
-- command: kubectl create namespace usine 
+- name: Create namespace usine
+  command: kubectl create namespace usine
 
-- command: kubectl apply -f /tmp/pv.yaml -n usine
+- name: Deploy PV
+  command: kubectl apply -f /tmp/pv.yaml -n usine
 
-- command: kubectl apply -f /tmp/pvc.yaml -n usine
+- name: Deploy PVC
+  command: kubectl apply -f /tmp/pvc.yaml -n usine
 
-- command: kubectl apply -f /tmp/deployment.yaml -n usine
+- name: Deploy deployment
+  command: kubectl apply -f /tmp/deployment.yaml -n usine
 
-- command: kubectl apply -f /tmp/service.yaml -n usine
+- name: Deploy Service
+  command: kubectl apply -f /tmp/service.yaml -n usine
 
-- command: kubectl apply -f /tmp/ingress.yaml -n usine
+- name: Deploy Ingress
+  command: kubectl apply -f /tmp/ingress.yaml -n usine
