--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -1,6 +1,8 @@
-- copy: src=templates/traefik.toml dest=/tmp/traefik.toml
+- name: Copy traefik.tom
+  copy: src=templates/traefik.toml dest=/tmp/traefik.toml
 
-- copy: src=templates/traefik-ds-ssl.yaml dest=/tmp/traefik-ds.yaml
+- name: Copy Traefik DaemonSet
+  copy: src=templates/traefik-ds-ssl.yaml dest=/tmp/traefik-ds.yaml
 
 #- command: openssl genrsa -des3 -passout pass:x -out /tmp/tls.pass.key 2048
 
@@ -12,18 +14,24 @@
 
 #- command: openssl x509 -req -days 365 -in /tmp/tls.csr -signkey /tmp/tls.key -out /tmp/tls.crt
 
-- command: kubectl apply -f https://raw.githubusercontent.com/containous/traefik/master/examples/k8s/traefik-rbac.yaml
+- name: Copy CRT
+  copy: src=files/tls.crt dest=/tmp/tls.crt
 
-- copy: src=files/tls.crt dest=/tmp/tls.crt
+- name: Copy KEY
+  copy: src=files/tls.key dest=/tmp/tls.key
 
-- copy: src=files/tls.key dest=/tmp/tls.key
+- name: Configure RBAC
+  command: kubectl apply -f https://raw.githubusercontent.com/containous/traefik/master/examples/k8s/traefik-rbac.yaml
 
 #- command: kubectl delete secret traefik-cert -n kube-system
 
-- command: kubectl create secret generic traefik-cert --from-file=/tmp/tls.crt --from-file=/tmp/tls.key -n kube-system
+- name: Create secret traefik-cert
+  command: kubectl create secret generic traefik-cert --from-file=/tmp/tls.crt --from-file=/tmp/tls.key -n kube-system
 
 #- command: kubectl delete configmap traefik-conf -n kube-system
 
-- command: kubectl create configmap traefik-conf --from-file=/tmp/traefik.toml -n kube-system
+- name: Create configmap traefik-conf
+  command: kubectl create configmap traefik-conf --from-file=/tmp/traefik.toml -n kube-system
 
-- command: kubectl apply -f /tmp/traefik-ds.yaml
+- name: Deploy traefik
+  command: kubectl apply -f /tmp/traefik-ds.yaml
