--- a/roles/jenkins/templates/pv.yaml
+++ b/roles/jenkins/templates/pv.yaml
@@ -10,7 +10,7 @@ spec:
   persistentVolumeReclaimPolicy: Recycle
   storageClassName: slow
   nfs:
-    path: /nfs/jenkins-dev
+    path: /nfs/{{jenkins_folder}}
     server: 149.202.62.219
 
 apiVersion: v1
@@ -25,4 +25,4 @@ spec:
   nfs:
     # FIXME: use the right IP
     server: 149.202.62.219
-    path: "/var/nfs/jenkins-dev"
+    path: "/var/nfs/{{jenkins_folder}}"
