--- a/roles/usine/tasks/main.yml
+++ b/roles/usine/tasks/main.yml
@@ -1,4 +1,7 @@
 - command: "kubectl label node {{big_node}} server_type=big"
 
-- name:
+- name: create namespace usine
   command: kubectl create namespace usine
+
+- name: create rolebinding admin / usine
+  command: kubectl create rolebinding usine-admin-binding --clusterrole=admin --user=system:serviceaccount:usine:default --namespace=usine
