--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -29,6 +29,9 @@ vps242131.ovh.net ansible_user=root
 [jenkins]
 vps242131.ovh.net ansible_user=root
 
+[nexus]
+vps242131.ovh.net ansible_user=root
+
 [all:vars]
 domaine=k8-dev.wildwidewest.xyz
 big_node=vps242130.ovh.net
