--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -32,6 +32,14 @@
   roles:
     - { role: nexus }
 
+- hosts: acme
+  roles:
+    - { role: acme }
+
 - hosts: traefik
   roles:
     - { role: traefik }
+
+- hosts: keycloak
+  roles:
+    - { role: keycloak }
