--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -41,3 +41,4 @@ big_node=vps242130.ovh.net
 master=vps242131.ovh.net
 jenkins_folder=jenkins-dev
 nexus_folder=nexus-dev
+keycloak_folder=keycloak-dev
