--- a/inventory/dev/dev.yml
+++ b/inventory/dev/dev.yml
@@ -1,7 +1,7 @@
-[nfs_nodes]
-vps242130.ovh.net ansible_user=root
-vps242131.ovh.net ansible_user=root
-vps267690.ovh.net ansible_user=root
+#[nfs_nodes]
+#vps242130.ovh.net ansible_user=root
+#vps242131.ovh.net ansible_user=root
+#vps267690.ovh.net ansible_user=root
 
 [docker_nodes]
 vps242130.ovh.net ansible_user=root
