--- a/inventory/dev/dev.yml
+++ b/inventory/dev/dev.yml
@@ -1,45 +1,12 @@
-#[nfs_nodes]
-#vps242130.ovh.net ansible_user=root
-#vps242131.ovh.net ansible_user=root
-#vps267690.ovh.net ansible_user=root
-
+[nfs_nodes]
+vps242130.ovh.net ansible_user=root
+vps242131.ovh.net ansible_user=root
+vps267690.ovh.net ansible_user=root
 [docker_nodes]
 vps242130.ovh.net ansible_user=root
 vps242131.ovh.net ansible_user=root
 vps267690.ovh.net ansible_user=root
 
-[kubernetes_nodes]
-vps242130.ovh.net ansible_user=root
-vps242131.ovh.net ansible_user=root
-vps267690.ovh.net ansible_user=root
-
-[kubernetes_master_nodes]
-vps242131.ovh.net ansible_user=root
-
-[kubernetes_slave_nodes]
-vps242130.ovh.net ansible_user=root
-vps267690.ovh.net ansible_user=root
--
-[traefik]
-vps242131.ovh.net ansible_user=root
-
-[usine]
-vps242131.ovh.net ansible_user=root
-
-[jenkins]
-vps242131.ovh.net ansible_user=root
-
-[nexus]
-vps242131.ovh.net ansible_user=root
-
-[keycloak]
-vps242131.ovh.net ansible_user=root
-
 [all:vars]
-domaine=k8-dev.wildwidewest.xyz
-big_node=vps242130.ovh.net
-master=vps242131.ovh.net
-jenkins_folder=jenkins-dev
-nexus_folder=nexus-dev
-keycloak_folder=keycloak-dev
-nfs_server=149.202.62.219
+domaine=k8.wildwidewest.xyz
+nfs_server=51.255.42.138
