--- a/roles/traefik/templates/traefik.toml
+++ b/roles/traefik/templates/traefik.toml
@@ -1,8 +1,6 @@
 # traefik.toml
-defaultEntryPoints = ["http","https"]
+defaultEntryPoints = [https"]
 [entryPoints]
-  [entryPoints.http]
-  address = ":80"
   [entryPoints.https]
   address = ":443"
     [entryPoints.https.tls]
