--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -12,6 +12,7 @@
   sysctl:
     name: net.bridge.bridge-nf-call-iptables
     value: 1
+  ignore_errors: yes
 
 - name: Disable firewalld
   systemd:
