--- a/roles/traefik/templates/traefik.toml
+++ b/roles/traefik/templates/traefik.toml
@@ -1,6 +1,8 @@
 # traefik.toml
-defaultEntryPoints = [https"]
+defaultEntryPoints = ["http", "https"]
 [entryPoints]
+  [entryPoints.http]
+    address = ":80"
   [entryPoints.https]
   address = ":443"
     [entryPoints.https.tls]
