--- a/dev/group_vars/all.yml
+++ b/dev/group_vars/all.yml
@@ -1,2 +1,9 @@
-certificates: 
+domaine: k8-dev.wildwidewest.xyz
+
+registry: registry.k8.wildwidewest.xyz
+
+big_node: vps242131.ovh.net
+nfs_server:
+
+certificates:
   - grafana.k8-dev.wildwidewest.xyz
