--- a/roles/traefik/templates/traefik-ds.yaml
+++ b/roles/traefik/templates/traefik-ds.yaml
@@ -25,7 +25,7 @@ spec:
       volumes:
       - name: ssl
         secret:
-          secretName: traefik-cert
+          secretName: letsencrypt-prod
       - name: config
         configMap:
           name: traefik-conf
