--- a/roles/traefik/templates/traefik.toml
+++ b/roles/traefik/templates/traefik.toml
@@ -1,5 +1,6 @@
 # traefik.toml
 defaultEntryPoints = ["http", "https"]
+#defaultEntryPoints = ["http"]
 [entryPoints]
   [entryPoints.http]
     address = ":80"
