--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,8 @@
 [defaults]
 roles_path = roles
+
+# disable SSH key host checking
+host_key_checking = False
+
+#stdout_callback = debug
+#stderr_callback = debug
