--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -3,19 +3,27 @@
     path: /etc/docker
     state: directory
     mode: 0755
+  become: yes
+  become_user: root
 
 - name: Configure Daemon.json
   template:
     src: templates/daemon.json
     dest: /etc/docker/daemon.json
+  become: yes
+  become_user: root
 
 - name: Install Docker
   yum:
     name: docker
     state: present
+  become: yes
+  become_user: root
 
 - name: Start Docker Service
   systemd:
     name: docker
     state: started
     enabled: yes
+  become: yes
+  become_user: root
