--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -28,7 +28,7 @@
   become: yes
   become_user: root
 
-- name: disable selinux
+- name: Disable selinux
   selinux:
     state: disabled
   become: yes
