--- a/roles/kubernetes-master/tasks/main.yml
+++ b/roles/kubernetes-master/tasks/main.yml
@@ -12,23 +12,35 @@
 - name: "Create join master fact"
   set_fact:
      join_master: "{{kubeadm_init_message.stdout_lines[-1]}}"
+  become: yes
+  become_user: root
 
 - name: Delete .kube folder
   file:
     path: ~/.kube
     state: absent
+  become: yes
+  become_user: root
 
 - name: Create .kube folder
   file:
     path: ~/.kube
     state: directory
+  become: yes
+  become_user: root
 
 - name: Copy admin.conf
   command: cp -i /etc/kubernetes/admin.conf ~/.kube/config
+  become: yes
+  become_user: root
 
 - name: Get K8s version
   shell: kubectl version | base64 | tr -d '\n'
   register: k8_version
+  become: yes
+  become_user: root
 
 - name: Create k8s network
   command: kubectl apply -f https://cloud.weave.works/k8s/net?k8s-version={{k8_version.stdout_lines[0]}}
+  become: yes
+  become_user: root
