--- a/roles/kubernetes-slave/tasks/main.yml
+++ b/roles/kubernetes-slave/tasks/main.yml
@@ -3,7 +3,7 @@
   become: yes
   become_user: root
 
-- name: Join cluster
+- name: "Join cluster {{ hostvars[groups['kubernetes-master'][0]]['join_master'] }}"
   command: "{{ hostvars[groups['kubernetes-master'][0]]['join_master'] }}"
   become: yes
   become_user: root
