--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -6,9 +6,13 @@
 - name: Delete Issuer
   command: kubectl delete issuer letsencrypt-prod -n kube-system
   ignore_errors: yes
+  become: yes
+  become_user: root
 
 - name: Create Issuer
   command: kubectl apply -f  /tmp/issuer.yaml -n kube-system
+  become: yes
+  become_user: root
 
 - name: Copy Certificate
   template:
@@ -18,6 +22,8 @@
 - name: Delete Certificate
   command: kubectl delete certificate traefik-cert -n kube-system
   ignore_errors: yes
+  become: yes
+  become_user: root
 
 - name: Create Certificate
   command: kubectl apply -f  /tmp/certificate.yaml -n kube-system
@@ -60,4 +66,3 @@
   command: kubectl apply -f /tmp/traefik-ds.yaml -n kube-system
   become: yes
   become_user: root
-  
