--- a/roles/nfs-master/tasks/main.yml
+++ b/roles/nfs-master/tasks/main.yml
@@ -1,5 +1,22 @@
+- name: "Install NFS utils"
+  yum:
+    name: nfs-utils
+    state: present
+  become: yes
+
+- name: "Start service nfs-server, if not running"
+  service:
+    name: nfs-server
+    state: started
+    enabled: yes
+  become: yes
+
 - name: "Generate /etc/exportfs"
   template:
     src: templates/exportfs
     dest: /etc/exports
-  become: true
+  become: yes
+
+- name: "Export NFS folders"
+  command: exportfs -a
+  become: yes
