--- a/roles/traefik/templates/traefik-ds.yaml
+++ b/roles/traefik/templates/traefik-ds.yaml
@@ -23,9 +23,10 @@ spec:
       terminationGracePeriodSeconds: 60
       hostNetwork: true
       volumes:
+{% if traefik.ssl is defined and traefik.ssl  == True %}
       - name: ssl
         secret:
-          secretName: traefik-cert
+          secretName: traefik-cert{% endif %}
       - name: config
         configMap:
           name: traefik-conf
@@ -33,17 +34,19 @@ spec:
       - image: traefik:1.4-alpine
         name: traefik-ingress-lb
         volumeMounts:
+{% if traefik.ssl is defined and traefik.ssl  == True %}
         - mountPath: "/ssl"
-          name: "ssl"
+          name: "ssl"{% endif %}
         - mountPath: "/config"
           name: "config"
         ports:
         - name: http
           containerPort: 80
           hostPort: 80
+{% if traefik.ssl is defined and traefik.ssl  == True %}
         - name: https
           containerPort: 443
-          hostPort: 443
+          hostPort: 443{% endif %}
         - name: admin
           containerPort: 8081
         securityContext:
