--- a/roles/traefik/templates/traefik.toml
+++ b/roles/traefik/templates/traefik.toml
@@ -1,12 +1,17 @@
 # traefik.toml
-defaultEntryPoints = ["http", "https"]
-#defaultEntryPoints = ["http"]
+{% if traefik.ssl is defined and traefik.ssl  == True %}
+    defaultEntryPoints = ["http", "https"]
+{% else %}
+    defaultEntryPoints = ["http"]
+{% endif %}
 [entryPoints]
   [entryPoints.http]
     address = ":80"
+{% if traefik.ssl is defined and traefik.ssl  == True %}
   [entryPoints.https]
   address = ":443"
     [entryPoints.https.tls]
       [[entryPoints.https.tls.certificates]]
       CertFile = "/ssl/tls.crt"
       KeyFile = "/ssl/tls.key"
+{% endif %}
