--- a/softwarefactory.yml
+++ b/softwarefactory.yml
@@ -26,7 +26,7 @@
   roles:
     - { role: helm, tags: helm }
     #    - { role: usine, tags: usine }
-#    - { role: nexus, tags: nexus }
+    - { role: nexus, tags: nexus }
     - { role: jenkins, tags: jenkins }
     - { role: traefik, tags: traefik }
 #    - { role: keycloak, tags: keycloak }
